--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <head>
   <title>BABIE LASH</title>
   <meta charset="utf-8">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1VQSR3NJ6S"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-1VQSR3NJ6S');
+</script>
 </head>
 <body>
   <h1><a href="index.html">바비눈썹</a></h1>
