--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html>
 <head>
   <title>BABIE LASH</title>
@@ -12,6 +12,11 @@
 
   gtag('config', 'G-1VQSR3NJ6S');
 </script>
+<style>
+a{
+  color:red;
+}
+</style>
 </head>
 <body>
   <h1><a href="index.html">바비눈썹</a></h1>
@@ -23,6 +28,17 @@
   </ol>
   <h2><a href="https://m.place.naver.com/place/38563457/home?entry=ple"target=
     blank title=속눈썹연장>속눈썹연장</a></h2>
+<!--
+  <h1><a href="index.html">바비눈썹</a></h1>
+  <p><iframe width="560" height="315" src="https://www.youtube.com/embed/ySXUKfOmWPk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+  <ol>
+    <li><a href="1.html">눈썹종류</a></li>
+    <li><a href="2.html">위치</a></li>
+    <li><a href="3.html">가격</a></li>
+  </ol>
+  <h2><a href="https://m.place.naver.com/place/38563457/home?entry=ple"target=
+    blank title=속눈썹연장>속눈썹연장</a></h2>
+  -->
   인천 미추홀구 <strong><u>눈썹문신</u>잘하는곳</strong>
    바비눈썹
   <img src="face.png" width="70%">
