--- a/1.html
+++ b/1.html
@@ -3,6 +3,11 @@
 <head>
   <title>BABIE LASH</title>
   <meta charset="utf-8">
+  <style>
+  a {
+    color:green;
+  }
+  </style>
 </head>
 <body>
   <h1><a href="index.html">바비눈썹</a></h1>
@@ -11,6 +16,14 @@
     <li><a href="2.html">위치</a></li>
     <li><a href="3.html">가격</a></li>
   </ol>
+<!--
+  <h1><a href="index.html"><font color="red">바비눈썹</font></a></h1>
+  <ol>
+    <li><a href="1.html"><font color="red">눈썹종류</font></a></li>
+    <li><a href="2.html"><font color="red">위치</font></a></li>
+    <li><a href="3.html"><font color="red">가격</font></a></li>
+  </ol>
+-->
   <h2>눈썹종류</h2>
   인천 미추홀구 <strong><u>눈썹문신</u>잘하는곳</strong>
    바비눈썹
