--- a/2.html
+++ b/2.html
@@ -3,6 +3,12 @@
 <head>
   <title>BABIE LASH</title>
   <meta charset="utf-8">
+  <style>
+  a{
+    color:yellow;
+  }
+
+  </style>
 </head>
 <body>
   <h1><a href="index.html">바비눈썹</a></h1>
@@ -11,6 +17,14 @@
     <li><a href="2.html">위치</a></li>
     <li><a href="3.html">가격</a></li>
   </ol>
+<!--
+  <h1><a href="index.html">바비눈썹</a></h1>
+  <ol>
+    <li><a href="1.html">눈썹종류</a></li>
+    <li><a href="2.html">위치</a></li>
+    <li><a href="3.html">가격</a></li>
+  </ol>
+-->
   <h2>위치</h2>
   인천 미추홀구 <strong><u>눈썹문신</u>잘하는곳</strong>
    바비눈썹
