--- a/1.html
+++ b/1.html
@@ -6,6 +6,7 @@
   <style>
   a {
     color:green;
+    text-decoration: none;
   }
   </style>
 </head>
@@ -13,7 +14,7 @@
   <h1><a href="index.html">바비눈썹</a></h1>
   <ol>
     <li><a href="1.html">눈썹종류</a></li>
-    <li><a href="2.html">위치</a></li>
+    <li><a href="2.html" style="color:blue;text-decoration:underline">위치</a></li>
     <li><a href="3.html">가격</a></li>
   </ol>
 <!--
