--- a/2.html
+++ b/2.html
@@ -6,6 +6,7 @@
   <style>
   a{
     color:yellow;
+    text-decoration: none;
   }
 
   </style>
@@ -15,7 +16,7 @@
   <ol>
     <li><a href="1.html">눈썹종류</a></li>
     <li><a href="2.html">위치</a></li>
-    <li><a href="3.html">가격</a></li>
+    <li><a href="3.html" style="color:red;text-decoration:underline">가격</a></li>
   </ol>
 <!--
   <h1><a href="index.html">바비눈썹</a></h1>
