--- a/3.html
+++ b/3.html
@@ -3,14 +3,28 @@
 <head>
   <title>BABIE LASH</title>
   <meta charset="utf-8">
+  <style>
+  a {
+    color:red;
+    text-decoration: none;
+  }
+
+  </style>
 </head>
 <body>
-  <h1><a href="index.html">바비눈썹</a></h1>
+  <h1><a href="index.html"style="color:blue;text-decoration:underline">바비눈썹</a></h1>
   <ol>
     <li><a href="1.html">눈썹종류</a></li>
     <li><a href="2.html">위치</a></li>
     <li><a href="3.html">가격</a></li>
   </ol>
+<!--
+  <ol>
+    <li><a href="1.html">눈썹종류</a></li>
+    <li><a href="2.html">위치</a></li>
+    <li><a href="3.html">가격</a></li>
+  </ol>
+-->
   <h2>가격</h2>
   인천 미추홀구 <strong><u>눈썹문신</u>잘하는곳</strong>
    바비눈썹
