--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <style>
 a{
   color:red;
+  text-decoration: none;
 }
 </style>
 </head>
@@ -22,7 +23,7 @@ a{
   <h1><a href="index.html">바비눈썹</a></h1>
   <p><iframe width="560" height="315" src="https://www.youtube.com/embed/ySXUKfOmWPk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
   <ol>
-    <li><a href="1.html">눈썹종류</a></li>
+    <li><a href="1.html" style="color:blue;text-decoration:underline">눈썹종류</a></li>
     <li><a href="2.html">위치</a></li>
     <li><a href="3.html">가격</a></li>
   </ol>
