--- a/index.html
+++ b/index.html
@@ -12,47 +12,13 @@
 
   gtag('config', 'G-1VQSR3NJ6S');
 </script>
-<style>
-a{
-  color:red;
-  text-decoration: none;
-}
-h1{
-  font-size: 60px;
-  text-align: center;
-  border-bottom:2px solid blue;
-  margin:0px;
-  padding: 20px;
-}
-#grid ol{
-  border-right:2px solid blue;
-  width:150px;
-  margin:0px;
-}
-#grid{
-  display: grid;
-  grid-template-columns: 200px 1fr;
-}
-#article{
-  padding:20px;
-}
-@media(max-width:800px){
-  display:block;{
-  }
-#grid ol{
-  border-right:none;
-}
-h1{
-  border-bottom:none;
-}
-}
-</style>
 </head>
+<link rel="stylesheet" href="style.css">
 <body>
-  <h1><a href="index.html"style="color:black;text-decoration:underline">바비눈썹</a></h1>
+  <h1><a href="index.html">바비눈썹</a></h1>
 <div id=grid>
     <ol>
-      <li><a href="1.html" style="color:blue;text-decoration:underline">눈썹종류</a></li>
+      <li><a href="1.html">눈썹종류</a></li>
       <li><a href="2.html">위치</a></li>
       <li><a href="3.html">가격</a></li>
     </ol>
