--- a/2.html
+++ b/2.html
@@ -3,48 +3,7 @@
 <head>
   <title>BABIE LASH</title>
   <meta charset="utf-8">
-  <style>
-  body{
-    margin:0px;
-  }
-   h1{
-     font-size: 60px;
-     text-align: center;
-     border-bottom:1px solid gray;
-     margin:0px;
-     padding-bottom:5px;
-   }
-   a{
-     color:black;
-     text-decoration: none;
-    }
-    #grid ol{
-      border-right: 1px solid gray;
-      width:100px;
-      margin:0px;
-      padding:20px;
-      padding-left:33px;
-
-    }
-    #article{
-      padding: 10px;
-    }
-    #grid{
-      display:grid;
-      grid-template-columns: 150px 1fr;
-    }
-    @media(max-width:800px){
-      #grid{
-        display: block;
-      }
-      #grid ol{
-        border-right:none;
-      }
-        h1{
-      border-bottom:none;
-}
-
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1><a href="index.html">바비눈썹</a></h1>
