--- a/3.html
+++ b/3.html
@@ -3,46 +3,10 @@
 <head>
   <title>BABIE LASH</title>
   <meta charset="utf-8">
-  <style>
-  body{
-    margin:0px;
-  }
-  a {
-    color:red;
-    text-decoration: none;
-  }
-h1{
-  border-bottom:2px solid black;
-  font-size: 60px;
-  text-align: center;
-  margin:0px;
-  padding:20px;
-}
-#grid ol {
-  border-right: 2px solid black;
-  width: 150px;
-  margin:0px;
-  padding:32px;
-}
-#grid{
-  display: grid;
-  grid-template-columns: 250px 1fr;
-}
-@media(max-width:800px){
-  display:block;{
-  }
-  #grid ol {
-    border-right:none;
-  }
-  h1{
-  border-bottom:none;
-}  
-}
-
-  </style>
 </head>
+<link rel="stylesheet" href="style.css">
 <body>
-  <h1><a href="index.html"style="color:blue;text-decoration:underline">바비눈썹</a></h1>
+  <h1><a href="index.html">바비눈썹</a></h1>
 <div id="grid">
   <ol>
     <li><a href="1.html">눈썹종류</a></li>
